# USBSync

./: CMakeLists.txt  LICENSE
assets/: resources.rc
include/: manager.h  sync.h  toast.h
src/: main.cpp  manager.cpp  sync.cpp  toast.cpp
